--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,7 +3,8 @@
   font-weight: 400;
   font-style: normal;
 }
-.bg-video{
+
+.bg-video {
   position: absolute;
   z-index: -2;
   width: 100vw;
@@ -13,34 +14,32 @@
   justify-content: center;
 }
 
-.bg-video .video{
+.bg-video .video {
   height: 100vh;
 }
 
 
-.bg-video::after{
+.bg-video::after {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(
-    90deg,
-    rgba(0,0,0,1) 0%,
-    rgba(0,0,0,.8) 50%,
-    rgba(0,0,0,1) 100%
-  );
+  background: linear-gradient(90deg,
+      rgba(0, 0, 0, 1) 0%,
+      rgba(0, 0, 0, .8) 50%,
+      rgba(0, 0, 0, 1) 100%);
 }
 
-.container{
+.container {
   position: relative;
   z-index: 3;
   display: flex;
   height: 100vh;
 }
 
-.container__left{
+.container__left {
   width: 35%;
   min-width: 300px;
   flex-direction: column;
@@ -48,17 +47,22 @@
   justify-content: space-around;
 }
 
-.score_box{
+.container__right {
+  width: 65%;
+}
+
+.score_box {
   background-color: #fff;
   padding: 30px;
 }
 
 
-.frame{
+.frame {
   border: 3px solid #000;
   border-radius: 5px;
 }
-.card_details{
+
+.card_details {
   background-color: #fff;
   padding: 1rem;
   display: flex;
@@ -67,4 +71,60 @@
   justify-content: space-between;
   height: 6rem;
   width: 100%;
+}
+
+.card-box_container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: .3rem;
+}
+
+.card-box{
+  width: 100%;
+  height: 9rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+.card-versus__container {
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  padding-top: .1rem;
+  justify-content: center;
+  height: 300px;
+}
+
+.versus-top,
+.versus-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 870px;
+}
+
+.container__right{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.versus-bottom{
+  margin-top: 1rem;
+}
+
+
+
+#next-duel{
+    display: none;
+}
+
+.card-infield{
+  height: 11rem;
+  width: 8rem;
+  border-radius: 8px;
+  /* border: 1px solid hotpink; */
 }
