--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -121,12 +121,18 @@
     display: none;
 }
 
-.card-infield{
+.card-infield {
   height: 11rem;
   width: 8rem;
   border-radius: 8px;
-  /* border: 1px solid hotpink; */
+  border: 1px solid yellow;
 }
+
+.card-infield img{
+  border: 1px solid darkgoldenrod;
+}
+
+
 .menu_avatar{
   display: flex;
   justify-content: center;
